--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.11.0",
     "langchain": "^0.3.24",
     "lucide-react": "^0.510.0",
+    "motion": "^12.11.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
