--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.11.0",
     "next": "15.3.2",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
