--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@huggingface/inference": "^2.8.1",
     "@langchain/community": "^0.3.42",
     "@langchain/core": "^0.3.55",
+    "@langchain/google-vertexai": "^0.2.9",
     "@langchain/openai": "^0.5.10",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "^0.6.1",
