--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.4"
   },
