--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.55",
     "@langchain/google-vertexai": "^0.2.9",
     "@langchain/openai": "^0.5.10",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
@@ -26,11 +27,14 @@
     "lucide-react": "^0.510.0",
     "motion": "^12.11.0",
     "next": "15.3.2",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.4",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.0.1",
     "react-speech-recognition": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.4"
