--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
     "react-speech-recognition": "^4.0.1",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.4"
   },
