did some changes

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "crypto": "^1.0.1",
     "formidable": "^3.5.4",
     "framer-motion": "^12.11.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "langchain": "^0.3.24",
     "lucide-react": "^0.510.0",
     "motion": "^12.11.0",
