--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.11.0",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.8.2",
     "jspdf": "^3.0.3",
     "langchain": "^0.3.24",
     "lucide-react": "^0.510.0",
