--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.55",
     "@langchain/google-vertexai": "^0.2.9",
     "@langchain/openai": "^0.5.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.6.1",
@@ -23,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "dagre": "^0.8.5",
     "formidable": "^3.5.4",
     "framer-motion": "^12.11.0",
     "html2canvas": "^1.4.1",
@@ -42,6 +44,7 @@
     "react-pdf": "^10.0.1",
     "react-speech-recognition": "^4.0.1",
     "react-syntax-highlighter": "^15.6.6",
+    "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.4"
@@ -49,6 +52,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dagre": "^0.7.53",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
